Updated tests to match Hawk's. New URL parsing lib

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src='lib/sha256-min.js'></script>
   <script type="text/javascript" src='lib/hmac-min.js'></script>
   <script type="text/javascript" src='lib/enc-base64-min.js'></script>
-  <script type="text/javascript" src='lib/js-url.js'></script>
+  <script type="text/javascript" src='lib/parseuri.js'></script>
 
   <script type="text/javascript" src="src/hawk-client.js"></script>
 
